--- a/va_intro.ipynb
+++ b/va_intro.ipynb
@@ -162,7 +162,7 @@
          "type": "integer"
         }
        ],
-       "ref": "81fd7b9f-a55f-400c-b2e4-9b06224e50cf",
+       "ref": "d59e1247-388e-48c9-9b37-4708daf7fd33",
        "rows": [
         [
          "0",
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "e3e5c5c5",
    "metadata": {},
    "outputs": [
@@ -643,15 +643,147 @@
   },
   {
    "cell_type": "markdown",
-   "id": "635a3f5d",
+   "id": "efaf36a3",
    "metadata": {},
    "source": [
-    "## Pipeline para Segmentación por color con HSV"
+    "### Correspondencia clase - etiqueta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
+   "id": "5fae98e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "ClassId",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Name",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "68fabeb7-4df7-410a-b8f7-d067c261fd08",
+       "rows": [
+        [
+         "0",
+         "0",
+         "Speed limit (20km/h)"
+        ],
+        [
+         "1",
+         "1",
+         "Speed limit (30km/h)"
+        ],
+        [
+         "2",
+         "2",
+         "Speed limit (50km/h)"
+        ],
+        [
+         "3",
+         "3",
+         "Speed limit (60km/h)"
+        ],
+        [
+         "4",
+         "4",
+         "Speed limit (70km/h)"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ClassId</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Speed limit (20km/h)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Speed limit (30km/h)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Speed limit (50km/h)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Speed limit (60km/h)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Speed limit (70km/h)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ClassId                  Name\n",
+       "0        0  Speed limit (20km/h)\n",
+       "1        1  Speed limit (30km/h)\n",
+       "2        2  Speed limit (50km/h)\n",
+       "3        3  Speed limit (60km/h)\n",
+       "4        4  Speed limit (70km/h)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Revisión de correspondencia clase (0-62) - etiqueta (nombre señal de tránsito)\n",
+    "df_etiquetas = pd.read_csv(os.path.join(dir_base, \"labels.csv\"))\n",
+    "df_etiquetas.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "39872618",
    "metadata": {},
    "outputs": [
@@ -879,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "19bf497c",
    "metadata": {},
    "outputs": [
@@ -911,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "5d6cf7d1",
    "metadata": {},
    "outputs": [
@@ -938,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "a8d620e9",
    "metadata": {},
    "outputs": [
